--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "chart.js": "^4.3.0",
-    "react-chartjs-2": "^5.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "recharts": "^2.9.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.7",
