--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "18.2.0",
     "chart.js": "^4.3.0",
     "react-chartjs-2": "^5.2.0",
-    "recharts": "^2.9.0"
+    "recharts": "^2.9.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.7",
