--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "chart.js": "^4.3.0",
     "react-chartjs-2": "^5.2.0",
     "recharts": "^2.9.0",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "framer-motion": "^11.0.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.7",
