--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-chartjs-2": "^5.2.0",
     "recharts": "^2.9.0",
     "react-icons": "^4.10.1",
-    "framer-motion": "^11.0.0"
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.453.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.7",
