--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "recharts": "^2.9.0",
     "react-icons": "^4.10.1",
     "framer-motion": "^11.0.0",
-    "lucide-react": "^0.453.0"
+    "lucide-react": "^0.453.0",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.7",
